force-app/main/default/objects/ilms__Question__c/fields/ilms__Answers__c.field-meta.xml
<CustomField>
    <fullName>ilms__Answers__c</fullName>
    <description>Matching Answers</description>
    <label>Answers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>