force-app/main/default/objects/ilms__Question__c/fields/ilms__Hint__c.field-meta.xml
<CustomField>
    <fullName>ilms__Hint__c</fullName>
    <label>Hint</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>