force-app/main/default/objects/ilms__Question__c/fields/ilms__Instructions__c.field-meta.xml
<CustomField>
    <fullName>ilms__Instructions__c</fullName>
    <label>Instructions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>