force-app/main/default/objects/ilms__Question__c/fields/ilms__No__c.field-meta.xml
<CustomField>
    <fullName>ilms__No__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>