force-app/main/default/objects/ilms__Question__c/fields/ilms__Page__c.field-meta.xml
<CustomField>
    <fullName>ilms__Page__c</fullName>
    <label>Page</label>
    <referenceTo>ilms__Page__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>