force-app/main/default/objects/ilms__Question__c/fields/ilms__Question__c.field-meta.xml
<CustomField>
    <fullName>ilms__Question__c</fullName>
    <label>Question</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>