force-app/main/default/objects/ilms__Question__c/fields/ilms__Solution__c.field-meta.xml
<CustomField>
    <fullName>ilms__Solution__c</fullName>
    <label>Solution</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>