force-app/main/default/objects/ilms__Question__c/recordTypes/ilms__Match.recordType-meta.xml
<RecordType>
    <fullName>ilms__Match</fullName>
    <active>true</active>
    <label>Match</label>
</RecordType>