force-app/main/default/objects/ilms__Question__c/recordTypes/ilms__Multi_Select.recordType-meta.xml
<RecordType>
    <fullName>ilms__Multi_Select</fullName>
    <active>true</active>
    <description>Ability to select from multiple choices, and have multiple right answers.</description>
    <label>Multi_Select</label>
</RecordType>