force-app/main/default/objects/ilms__Question__c/recordTypes/ilms__Multiple_Choice.recordType-meta.xml
<RecordType>
    <fullName>ilms__Multiple_Choice</fullName>
    <active>true</active>
    <description>Ability to select from multiple choices, but the user can only select one answer.</description>
    <label>Multiple_Choice</label>
</RecordType>