force-app/main/default/objects/ilms__Question__c/recordTypes/ilms__Text_Match.recordType-meta.xml
<RecordType>
    <fullName>ilms__Text_Match</fullName>
    <active>true</active>
    <description>Ability to allow the user to enter text as their answer.</description>
    <label>Text_Match</label>
</RecordType>