force-app/main/default/objects/ilms__Question__c/validationRules/ilms__Course_has_been_published.validationRule-meta.xml
<ValidationRule>
    <fullName>ilms__Course_has_been_published</fullName>
    <active>true</active>
    <errorConditionFormula>ilms__Page__r.ilms__Chapter__r.ilms__Book__r.ilms__wasPublished__c == true</errorConditionFormula>
    <errorMessage>The course has been Published. Unfortunately, you can no longer make changes to the Course and it&#39;s contents. You will need to &#39;Clone&#39; the course to make any changes.</errorMessage>
</ValidationRule>